Fix Bug 354055 - system freeze when trying to send email via ctrl + return with "spellcheck before send" activated

FIXED-IN: 5.4.0
BUG: 354055